add link button to paymentUrl if there are pending payments

--- a/css/bibdk_openuserstatus.css
+++ b/css/bibdk_openuserstatus.css
@@ -23,3 +23,7 @@ table.fiscal-account td:last-child {
   margin: 1em 0;
   font-weight: bold;
 }
+
+.payment-url-link {
+  margin: 10px 5px 10px 0;
+}
