--- a/css/bibdk_openuserstatus.css
+++ b/css/bibdk_openuserstatus.css
@@ -20,7 +20,7 @@ table.fiscal-account td:last-child {
 }
 
 .openuserstatus .element-title h3 {
-  margin: 1em 0;
+  margin: .2em 0;
   font-weight: bold;
 }
 
