--- a/css/bibdk_openuserstatus.css
+++ b/css/bibdk_openuserstatus.css
@@ -27,3 +27,8 @@ table.fiscal-account td:last-child {
 .payment-url-link {
   margin: 10px 5px 10px 0;
 }
+
+.bibdk-openuserstatus-mypage-info .bibdk-mypage-row .item-row .throbber {
+    margin: .9em .5em;
+    float:right;
+}
